# authentication_service

./: Dockerfile  pyproject.toml
app/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  config.py  database.py  handlers.py  main.py  models.py
app/compiled_pb/: auth_pb2_grpc.py
app/protobufs/: auth.proto
